@@ -11,6 +11,7 @@ import net.minecraft.core.Direction;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.Mob;
@@ -86,7 +87,7 @@ public class LaserTrapPlayer {
             targetEntity.hurtServer(level, fakePlayer.damageSources().playerAttack(fakePlayer), totalDamage);
         }
 
-        spawnParticle(dir, targetPos, itemStack);
+        addEffect(dir, targetPos, itemStack);
     }
 
     private boolean canHitEntity(Entity entity) {
@@ -104,7 +105,7 @@ public class LaserTrapPlayer {
         return fireAspectLevel > 0 && (entity instanceof Mob || entity instanceof Player);
     }
 
-    private void spawnParticle(Direction dir, BlockPos effectPos, ItemStack itemStack) {
+    private void addEffect(Direction dir, BlockPos effectPos, ItemStack itemStack) {
         if (!(fakePlayer.level() instanceof ServerLevel serverLevel)) return;
 
         // Create laser trap particle
@@ -113,6 +114,9 @@ public class LaserTrapPlayer {
         var color = getParticleColor(itemStack);
         // Spawn particle
         serverLevel.sendParticles(laserTrapParticleType, vecPos.x, vecPos.y, vecPos.z, 0, color.r(), color.g(), color.b(), 1);
+
+        // Play sound effect
+        serverLevel.playSound(null, vecPos.x, vecPos.y, vecPos.z, ModSoundEvents.ITEM_LASER_TRAP_ACTIVATE, SoundSource.BLOCKS, 0.5F, 1.0F);
     }
 
     private Color4F getParticleColor(ItemStack itemStack) {
