@@ -6,4 +6,14 @@ import net.minecraft.sounds.SoundEvent;
 public class ModSoundEvents {
     public static final SoundEvent ITEM_LASER_BLADE_SWING = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_blade.swing"));
     public static final SoundEvent ITEM_LASER_BLADE_FP_SWING = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_blade_fp.swing"));
+    public static final SoundEvent ITEM_LASER_BLADE_HIT = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_blade.hit"));
+    public static final SoundEvent ITEM_LASER_BLADE_FP_HIT = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_blade_fp.hit"));
+    public static final SoundEvent ITEM_LASER_TRAP_ACTIVATE = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_trap.activate"));
+    // Only for Forge/NeoForge versions
+    public static final SoundEvent ITEM_DX_LASER_BLADE_SWING = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.dx_laser_blade.swing"));
+    public static final SoundEvent ITEM_DX_LASER_BLADE_HIT = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.dx_laser_blade.hit"));
+    public static final SoundEvent ITEM_LASER_BLADE_BLOCK = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_blade.block"));
+    public static final SoundEvent ITEM_LASER_BLADE_FP_BLOCK = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.laser_blade_fp.block"));
+    public static final SoundEvent ITEM_LB_BRAND_NEW_USE = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.lb_brand_new.use"));
+    public static final SoundEvent ITEM_LB_BRAND_NEW_FP_USE = SoundEvent.createVariableRangeEvent(ToLaserBlade.makeId("item.lb_brand_new_fp.use"));
 }
