@@ -8,5 +8,20 @@
     "sounds": [
       "tolaserblade:item/laser_blade_fp/swing"
     ]
+  },
+  "item.laser_blade.hit": {
+    "sounds": [
+      "tolaserblade:item/laser_blade/hit"
+    ]
+  },
+  "item.laser_blade_fp.hit": {
+    "sounds": [
+      "tolaserblade:item/laser_blade_fp/hit"
+    ]
+  },
+  "item.laser_trap.activate": {
+    "sounds": [
+      "tolaserblade:item/laser_trap/activate"
+    ]
   }
 }
