@@ -3,6 +3,10 @@
 [Source](https://github.com/Iunius118/ToLaserBlade-Fabric).
 
 ## [Unreleased]
+### Added
+- Laser blade sound events:
+  `tolaserblade:item.laser_blade.hit`, `tolaserblade:item.laser_blade_fp.hit`, and `tolaserblade:item.laser_trap.activate`.
+
 ### Changed
 - Require Fabric Loader 0.16.10 and Fabric API 0.116.0+1.21.4.
 
